...
    <fragment
        android:id="@+id/browseChoiceFragment"
        android:name="com.example.app_mythology.ui.browse.BrowseChoiceFragment"
        android:label="Parcourir"
        tools:layout="@layout/fragment_browse_choice">
        <action android:id="@+id/action_browseChoice_to_entityList"
            app:destination="@id/entityListFragment" />
        <action android:id="@+id/action_browseChoice_to_placeList"
            app:destination="@id/placeListFragment" />
        <action android:id="@+id/action_browseChoice_to_artifactList"
            app:destination="@id/artifactListFragment" />
    </fragment>

    <fragment
        android:id="@+id/entityListFragment"
        android:name="com.example.app_mythology.ui.browse.EntityListFragment"
        android:label="Entités"
...
        <argument android:name="quizMode" app:argType="string" android:defaultValue="classic" />
        <action android:id="@+id/action_domain_to_entity"
            app:destination="@id/quizEntityChoiceFragment" />
        <action android:id="@+id/action_domain_to_artifact"
            app:destination="@id/quizArtifactChoiceFragment" />
        <action android:id="@+id/action_domain_to_place"
            app:destination="@id/quizPlaceChoiceFragment" />
    </fragment>

    <!-- ── QCM — entités et artéfacts ─────────────────────────────────── -->
    <fragment
        android:id="@+id/quizEntityQcmChoiceFragment"
        android:name="com.example.app_mythology.ui.quiz.QuizQcmChoiceFragment"
...
    <fragment
        android:id="@+id/quizPlaceChoiceFragment"
        android:name="com.example.app_mythology.ui.quiz.QuizPlaceChoiceFragment"
        android:label="Quiz Lieux"
        tools:layout="@layout/fragment_quiz_place_choice">
        <action android:id="@+id/action_quizPlaceChoice_to_quizYggdrasil"
            app:destination="@id/quizYggdrasilFragment" />
        <action android:id="@+id/action_quizPlaceChoice_to_quizRivers"
            app:destination="@id/quizRiversFragment" />
        <action android:id="@+id/action_quizPlaceChoice_to_quizUnderworld"
            app:destination="@id/quizUnderworldFragment" />
    </fragment>

    <fragment
        android:id="@+id/quizYggdrasilFragment"
        android:name="com.example.app_mythology.ui.quiz.QuizPlaceFragment"
        android:label="Arbre Monde"
...
